# LDIOpenGL

./: CMakeLists.txt
apps/getLDI/: CMakeLists.txt
apps/getLDI/modules/: FindGLFW.cmake  FindGLM.cmake
apps/getLDI/src/: main.cpp
include/: LDIMesh.hpp  LDIModel.hpp  LDIShader.hpp  LDImodel.hpp  LDIstructs.hpp  Utils.hpp
shaders/: addBlockSum.glsl  basic.frag  basic.vert  blockSum.glsl  cAddBlocSum.glsl  cBlocSum.glsl  cBoxOpt.glsl  cBubbleSort.glsl  cCudppRadixSort.glsl  cFindRadixOffsets.glsl  cGetIntervals.glsl  cGetVoxelFrags.glsl  cGetVoxelFragsDistrib.glsl  cGradientsOpt.glsl  cIndirect.glsl  cMultiGradientsOpt.glsl  cPrefixSum.glsl  cReorderData.glsl  cSVOFlag.glsl  cSamScan.glsl  cSamScanUint64.glsl  cSparseGradients.glsl  cSparseMultiGradients.glsl  cTranspose.glsl  cZeroInitializationFloat.glsl  cZeroInitializationUint.glsl  cZeroInitializationUint64.glsl  countPixelFrag.frag  fHashPixels.glsl  fPass.glsl  fRasterizationOpt.glsl  fRasterization_AOS.glsl  fRasterization_SOA.glsl  fboPass.frag  fboPass.vert  fillIndexFrag.glsl  fillPixelFrag.frag  fillPixelHashTable.frag  gRasterizationOpt.glsl  initPixelFrag.glsl  (+11 more)
shaders/displacement/: fPassDisplacement.glsl  fRasterizationOptDisplacement.glsl  gRasterizationOptDisplacement.glsl  tcPassDisplacement.glsl  tePassDisplacement.glsl  vPassDisplacement.glsl
shaders/include/: auxiliary_functions.hglsl  buffers.hglsl  constants.hglsl  extensions.hglsl  structures.hglsl  tessellationEvaluation.hglsl  uniforms.hglsl
src/: LDIMesh.cpp  LDIModel.cpp  LDIShader.cpp  LDImodel.tpp  LDImodelDisplacement.tpp  LDImodelMulti.tpp  LDImodelRadixSort.tpp  LDImodel_opt.tpp
